<resources>

    <!-- Titles -->
    <string name="app_name">Akl PT Tracker</string>
    <string name="home_name">Find a stop</string>
    <string name="live_map_name">Live Map</string>
    <string name="favourites_name">Favourite stops</string>
    <string name="settings_label">Settings</string>
    <string name="about_label">About</string>

    <!-- Home screen -->
    <string name="refresh_stops">Refresh stops list</string>

    <!-- Service Board -->
    <string name="board_show_terminating">Show terminating services</string>
    <string name="board_change_favourite">Add Favourite</string>
    <string name="board_change_source">Use maxx.co.nz</string>
    <string name="message_negative_stops_away">DEPARTING</string>
    <string name="train_platform_label">Plat.</string>
    <string name="ferry_pier_label">Pier</string>
    <string name="route_number_heading">Route</string>
    <string name="scheduled_time_heading">Scheduled</string>
    <string name="secs_away_heading">Due</string>
    <string name="stops_away_heading">Stops</string>
    <string name="old_data_name">Standard Board</string>
    <string name="new_data_name">Tracking Board</string>

    <!-- Tracker -->
    <string name="stops_away_label">Stops:</string>
    <string name="secs_away_label">Due:</string>

    <!-- Favourites -->
    <string name="clear_favourites">Clear Favourites</string>
    <string name="favourites_delete_all_dialog_title">Clear Favourites</string>
    <string name="favourites_delete_all_dialog_text">This action cannot be undone</string>
    <string name="favourites_delete_all_dialog_ok">Delete all</string>
    <string name="favourites_delete_all_dialog_cancel">Keep</string>

    <!-- About -->
    <string name="about_dev_credit">Developed by Hamish O\'Neill during 2016/17.</string>
    <string name="about_github_link">Open source on <a href="https://github.com/HamishONE/trackbus/">GitHub</a>.</string>
    <string name="about_feedback_encourage">Feedback, feature requests and bug reports are appreciated (via Google Play or <a href="mailto:oneillhamish@gmail.com">email</a>).</string>
    <string name="about_data_warning">All data is received directly from Auckland Transport servers and is therefore outside of my control.</string>
    <string name="about_tips">\nTips and tricks:
        \n&#8226; Click on a route in the tracking board or live map to access a tracking map.
        \n&#8226; When first starting services generally appear in the standard board, the live map and the tracking board in that order.
        \n&#8226; The due times in the standard board tend to be more sensible.
        \n&#8226; Hold down on a route in one of the service boards to mark it as a favourite.
        \n&#8226; In the tracking map press the three dots at the top to access the switch to turn on the Google traffic overlay.
        \n&#8226; After service changes press the three dots at the top of find my stop to access the button to refresh the stops database.
        \n&#8226; With the favourite stops: delete by swiping to the side, reorder by dragging the three bars, rename by holding down.
        \n
    </string>

    <!-- Hamburger menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Settings-->

    <string-array name="start_page_list">
        <item>@string/home_name</item>
        <item>@string/live_map_name</item>
        <item>@string/favourites_name</item>
    </string-array>
    <string-array name="start_page_list_values">
        <item>find_a_stop</item>
        <item>all_vehicles</item>
        <item>favourite_stops</item>
    </string-array>

    <string-array name="server_list">
        <item>No (more reliable)</item>
        <item>Yes (faster)</item>
    </string-array>
    <string-array name="server_list_values">
        <item>false</item>
        <item>true</item>
    </string-array>

    <string-array name="api_version_list">
        <item>Version 1</item>
        <item>Version 2</item>
    </string-array>
    <string-array name="api_version_list_values">
        <item>v1</item>
        <item>v2</item>
    </string-array>

</resources>