<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/go_main"
            android:icon="@drawable/map_icon"
            android:title="@string/home_name" />
        <item
            android:id="@+id/go_all_buses"
            android:icon="@drawable/bus_icon"
            android:title="@string/live_map_name" />
        <item
            android:id="@+id/go_favs"
            android:icon="@drawable/heart_icon_filled"
            android:title="@string/favourites_name" />
        <item
            android:id="@+id/go_settings"
            android:icon="@drawable/cog"
            android:title="@string/settings_label" />
    </group>

    <item android:title="Recent Stops">
        <menu android:id="@+id/recent_stops">
            <item
                android:id="@+id/bus1"
                android:title=""
                android:visible="false" />
            <item
                android:id="@+id/bus2"
                android:title=""
                android:visible="false" />
            <item
                android:id="@+id/bus3"
                android:title=""
                android:visible="false" />
            <item
                android:id="@+id/bus4"
                android:title=""
                android:visible="false" />
            <item
                android:id="@+id/bus5"
                android:title=""
                android:visible="false" />
        </menu>
    </item>

</menu>
